--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
 
-  "name": "Bisbot",
+  "name": "Palibot",
 
-  "description": "i love daft punk",
+  "description": "I help you to hunt big monsters !",
 
-  "version": "1.0.0",
+  "version": "2.0.0",
 
   "main": "main.js",
 
@@ -16,7 +16,7 @@
 
   "dependencies": {
 
-    "discord.js": "11.1.0",
+    "discord.js": "11.4.2",
 
     "request": "2.81.0",
 
