--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
 
     "request": "2.81.0",
 
-    "node-fetch" : "2.6.0",
+
+    "node-fetch": ">=2.6.1",
+
 
     "fast-levenshtein" : "2.0.6"
   }
